[project]
name = "antigravity-quota"
version = "0.3.1"
description = "API Server for Antigravity Quota Management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "cachetools>=6.2.4",
  "fastapi[standard]>=0.127.1",
  "httpx>=0.28.1",
  "python-dotenv>=1.2.1",
]

[dependency-groups]
dev = ["pytest>=9.0.0"]
