[project]
name = "coding-plan-quota-query"
version = "0.4.0"
description = "API Server for Antigravity Quota Management"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "cachetools>=6.2.4",
  "fastapi[standard]>=0.127.1",
  "httpx>=0.28.1",
  "python-dotenv>=1.2.1",
]
typeCheckingMode = "standard"

[dependency-groups]
dev = ["pytest>=9.0.0"]
